# titanic_predict

./: 0.1-data_exploration.ipynb  0.2-streamline_analysis.ipynb  0.3-Stacking_models.ipynb  1.4-voting_classifier.ipynb  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py  test_environment.py  wily-report.html
docs/: Makefile  conf.py  index.rst  make.bat
src/: __init__.py
src/data/: make_dataset.py
src/features/: build_features.py
src/features/tests/: test_build_features.py
